fix: blurred bold font render in webfit on notification bubbles as only weight <500 supported

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -3284,7 +3284,7 @@ label input {
 
 .notification-dialog-title {
     font-size: 16px;
-    font-weight: bold;
+    font-weight: 500;
     padding-right: 25px;
 }
 
